# maildb

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/skills/chronicle-build/: SKILL.md
.github/workflows/: ci.yml
apps/chronicle/: README.md
apps/chronicle/server/: pyproject.toml
apps/chronicle/server/perf/: harness.py  results-2026-07-14.json
apps/chronicle/server/src/chronicle_server/: __init__.py  __main__.py  app.py  archive.py  ask.py  auth.py  cache.py  chronicle.py  config.py  cursor.py  db.py  events.py  files.py  gateway.py  generate.py  health.py  ids.py  interpret.py  people.py  querysyntax.py  redact.py  sanitize.py  scope.py  search.py  settings_api.py  sources.py  topics.py  workspaces.py
apps/chronicle/server/tests/: conftest.py  test_archive.py  test_ask.py  test_auth.py  test_cache.py  test_chronicle.py  test_cursor.py  test_db.py  test_etag.py  test_events.py  test_files.py  test_gateway.py  test_generate.py  test_health.py  test_ids.py  test_interpret.py  test_people.py  test_querysyntax.py  test_redact.py  test_sanitize.py  test_scope.py  test_search.py  test_settings.py  test_sources.py  test_topics.py  test_workspaces.py
apps/chronicle/web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/chronicle/web/src/: App.tokens.test.tsx  App.tsx  index.css  main.tsx
apps/chronicle/web/src/a11y/: ariaCoverage.test.tsx  contrast.test.ts  contrast.ts  focusOrder.test.tsx  focusable.ts  renderRoute.tsx
apps/chronicle/web/src/acceptance/: chronicle.acceptance.test.tsx  workflowA.acceptance.test.tsx  workflowB.acceptance.test.tsx  workflowC.acceptance.test.tsx  workflowD.acceptance.test.tsx  workflowE.acceptance.test.tsx
apps/chronicle/web/src/api/: client.test.ts  client.ts  cspMeta.test.ts  types.ts
apps/chronicle/web/src/ask/: AnswerBlock.test.tsx  AnswerBlock.tsx  citationText.tsx  sseClient.test.ts  sseClient.ts
apps/chronicle/web/src/auth/: LoginPage.test.tsx  LoginPage.tsx  ReauthPanel.test.tsx  ReauthPanel.tsx  RequireAuth.tsx  useSession.ts
apps/chronicle/web/src/chronicle/: ChroniclePage.timeline.test.tsx  DensityNavigator.tsx  LaneConfigPanel.test.tsx  LaneConfigPanel.tsx  TimelineCanvas.events.test.ts  TimelineCanvas.focus.test.ts  TimelineCanvas.tsx  TimelineTable.test.tsx  TimelineTable.tsx  TimelineToolbar.test.tsx  TimelineToolbar.tsx  bucketAtX.test.ts  laneModel.test.ts  laneModel.ts  timeScale.test.ts  timeScale.ts  useChronicleBuckets.test.ts  useChronicleBuckets.ts
apps/chronicle/web/src/compare/: CompareTable.tsx  CompareView.test.tsx  CompareView.tsx  normalize.test.ts  normalize.ts  ranges.test.ts  ranges.ts  useChronicleCompare.ts
apps/chronicle/web/src/events/: CreateEventFromBrush.test.tsx  CreateEventFromBrush.tsx  DismissedEventsList.test.tsx  DismissedEventsList.tsx  EventCard.test.tsx  EventCard.tsx  GeneratePanel.test.tsx  GeneratePanel.tsx  ReconstructionView.test.tsx  ReconstructionView.tsx  api.ts  claimStatus.test.ts  claimStatus.ts  derivation.test.ts  derivation.ts  format.ts
apps/chronicle/web/src/files/: FamilyPanel.tsx  FilesPage.tsx  (+6 more)
docs/: ARCHITECTURE.md  DESIGN.md
docs/retrospectives/: attachment-drain-retrospective.md  attachment-residuals-2026-05-03.md  first-import-retrospective.md
docs/reviews/: 2026-06-10-deep-review.md
docs/runbooks/: attachment-extraction-execution-plan.md  attachment-extraction-migration.md  attachment-extraction-mps-discipline.md  linux-migration.md  multi-account-migration.md
docs/standards/: python-tooling.md  testing.md
docs/superpowers/plans/: 2026-03-22-maildb-implementation.md  2026-03-23-scale-ingest.md  2026-03-28-bootstrap-script.md  2026-03-29-sprint-1.md  2026-03-30-sprint-3-api-redesign.md  2026-03-31-bug-fixes.md  2026-03-31-context-efficient-mcp.md  2026-03-31-debug-logging.md  2026-03-31-enhancements.md  2026-04-16-multi-account-support.md  2026-04-17-attachment-semantic-search.md  2026-07-13-life-chronicle-plan.md
docs/superpowers/progress/: 2026-03-29-sprint-1.md
docs/superpowers/specs/: 2026-03-22-maildb-design.md  2026-03-23-scale-ingest-design.md  2026-03-28-bootstrap-script-design.md  2026-03-29-sprint-1.md  2026-03-30-api-redesign-design.md  2026-03-31-bug-fixes-design.md  2026-03-31-context-efficient-mcp-design.md  2026-03-31-debug-logging-design.md  2026-03-31-enhancements-design.md  2026-04-16-multi-account-support-design.md  2026-04-17-attachment-semantic-search-design.md  2026-07-13-life-chronicle-spec.md  2026-07-14-life-chronicle-verification-report.md
scripts/: bootstrap.sh  smoke_marker.py  spike_markitdown.py  surya_mps_patch.py  test_marker_with_patch.py  verify_env.py
scripts/patches/: surya-mps-fix.patch
skills/using-maildb/: SKILL.md
src/maildb/: __init__.py  __main__.py  cli.py  config.py  contacts.py  db.py  dsl.py  embeddings.py  ingest.py  jobs.py  maildb.py  models.py  parsing.py  pii.py  schema.sql  schema_indexes.sql  schema_tables.sql  server.py  tokenizer.py
src/maildb/ingest/: __init__.py  __main__.py  attachments.py  chunking.py  embed.py  extraction.py  index.py  orchestrator.py  parse.py  process_attachments.py  progress.py  run_logs.py  split.py  tasks.py  threads.py
tests/: conftest.py
tests/fixtures/: generate_mbox.py  sample.mbox
tests/integration/: test_contacts.py  test_db.py  test_dsl.py  test_embed_worker.py  test_index_phase.py  test_ingest.py  test_maildb.py  test_migrate.py  test_multi_account_queries.py  test_orchestrator.py  test_parse_worker.py  test_process_attachments.py  test_process_attachments_e2e.py  test_search_attachments.py  test_server.py  test_tasks.py  test_threads.py
tests/unit/: test_attachments.py  test_chunking.py  test_cleaning.py  test_cli.py  test_cli_process.py  test_config.py  test_contacts.py  test_dsl.py  test_embeddings.py  test_extraction.py  test_jobs.py  test_log_tool.py  test_logging.py  test_maildb_sql.py  test_models.py  test_parsing.py  test_pii.py  test_process_attachments.py  test_progress.py  test_run_logs.py  test_server.py  test_split.py  test_tokenizer.py
(+97 files in other folders)
