[project]
name = "maildb"
version = "0.1.0"
description = "Personal email database with semantic search"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
    "ollama>=0.4",
    "pydantic-settings>=2.5",
    "beautifulsoup4>=4.12",
    "structlog>=24.4",
    "mcp>=1.26.0",
    "typer>=0.12",
    "marker-pdf>=1.2.0",
    "tokenizers>=0.20",
]

[project.scripts]
maildb = "maildb.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "factory-boy>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maildb"]

[tool.ruff]
target-version = "py312"
line-length = 99
extend-exclude = ["attachments", "ingest_tmp"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print (no print statements)
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "C901",  # mccabe complexity
    "COM",   # flake8-commas
    "FURB",  # refurb (modernization)
    "RET",   # flake8-return
    "TC",    # flake8-type-checking
    "PERF",  # perflint (performance)
    "LOG",   # flake8-logging
    "FLY",   # flynt (f-string conversion)
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "RSE",   # flake8-raise
    "TRY",   # tryceratops (exception handling)
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420 (implicit namespace packages)
    "PGH",   # pygrep-hooks
    "PLC",   # pylint convention
    "PLE",   # pylint error
    "PLW",   # pylint warning
]
ignore = [
    "E501",    # line length handled by formatter
    "COM812",  # trailing comma — conflicts with formatter
    "TRY003",  # long exception messages are fine
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ARG001",  # unused fixture args are side-effect fixtures
    "SLF001",  # accessing private test helpers is fine
    "PLR2004", # magic values in assertions are fine
    "S108",    # /tmp paths in test data are not real temp file operations
]
"src/maildb/maildb.py" = ["S608", "C901"]  # SQL construction is safe (parameterized); complexity from filter params
"src/maildb/dsl.py" = ["S608"]  # SQL construction is safe (parameterized, whitelisted)
"src/maildb/ingest/process_attachments.py" = ["S608"]  # selector_sql is internal-only; not user-supplied
"src/maildb/ingest/orchestrator.py" = ["C901"]  # pipeline orchestration is inherently sequential
"tests/fixtures/*.py" = ["INP001"]  # fixture scripts, not packages

[tool.ruff.lint.isort]
known-first-party = ["maildb"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["ollama.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"
markers = [
    "integration: tests requiring PostgreSQL",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
