[project]
name = "chronicle-server"
version = "0.1.0"
description = "Life Chronicle API server — analyst workstation over the maildb archive"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "itsdangerous>=2.2",
    "argon2-cffi>=23.1",
    "pydantic-settings>=2.5",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "structlog>=24.4",
    "maildb",
    "nh3>=0.3.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.uv.sources]
maildb = { path = "../../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronicle_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
